styles.css
/* ... */
@-o-keyframes chromoColors {
      0%      {background-color: #2e8fd1;}
      2,778%  {background-color: #3473d5;}
      5,556%  {background-color: #3c57d4;}
      8,334%  {background-color: #4341d6;}
      11,111% {background-color: #4d35d6;}
      13,889% {background-color: #5c2dd6;}
      16,667% {background-color: #7439dc;}
      19,445% {background-color: #873ad8;}
      22,222% {background-color: #9b3ad7;}
      25%     {background-color: #ac3ad5;}
      27,778% {background-color: #bc3acd;}
      30,556% {background-color: #cb3bc4;}
      33,334% {background-color: #d43bb6;}
      36,111% {background-color: #d83da1;}
      38,889% {background-color: #d7408a;}
      41,667% {background-color: #d64272;}
      44,444% {background-color: #d7485f;}
      47,222% {background-color: #d9504f;}
      50%     {background-color: #d65941;}
      52,778% {background-color: #d7673c;}
      55,556% {background-color: #d7753c;}
      58,333% {background-color: #d5843a;}
      61,111% {background-color: #d49139;}
      63,889% {background-color: #d59e38;}
      66,667% {background-color: #d6aa35;}
      69,444% {background-color: #d4b435;}
      72,222% {background-color: #d8c348;}
      75%     {background-color: #d0cc48;}
      77,778% {background-color: #c2ce49;}
      80,556% {background-color: #5bd451;}
      83,333% {background-color: #48d057;}
      86,111% {background-color: #36cf69;}
      88,889% {background-color: #22c078;}
      91,667% {background-color: #28c583;}
      94,444% {background-color: #2bb6a2;}
      97,222% {background-color: #2ca5bc;}
      100%    {background-color: #2e8fd1;}
}
@-webkit-keyframes chromoColors {
      0%      {background-color: #2e8fd1;}
      2,778%  {background-color: #3473d5;}
      5,556%  {background-color: #3c57d4;}
      8,334%  {background-color: #4341d6;}
      11,111% {background-color: #4d35d6;}
      13,889% {background-color: #5c2dd6;}
      16,667% {background-color: #7439dc;}
      19,445% {background-color: #873ad8;}
      22,222% {background-color: #9b3ad7;}
      25%     {background-color: #ac3ad5;}
      27,778% {background-color: #bc3acd;}
      30,556% {background-color: #cb3bc4;}
      33,334% {background-color: #d43bb6;}
      36,111% {background-color: #d83da1;}
      38,889% {background-color: #d7408a;}
      41,667% {background-color: #d64272;}
      44,444% {background-color: #d7485f;}
      47,222% {background-color: #d9504f;}
      50%     {background-color: #d65941;}
      52,778% {background-color: #d7673c;}
      55,556% {background-color: #d7753c;}
      58,333% {background-color: #d5843a;}
      61,111% {background-color: #d49139;}
      63,889% {background-color: #d59e38;}
      66,667% {background-color: #d6aa35;}
      69,444% {background-color: #d4b435;}
      72,222% {background-color: #d8c348;}
      75%     {background-color: #d0cc48;}
      77,778% {background-color: #c2ce49;}
      80,556% {background-color: #5bd451;}
      83,333% {background-color: #48d057;}
      86,111% {background-color: #36cf69;}
      88,889% {background-color: #22c078;}
      91,667% {background-color: #28c583;}
      94,444% {background-color: #2bb6a2;}
      97,222% {background-color: #2ca5bc;}
      100%    {background-color: #2e8fd1;}
}



.chromotherapy {
    -webkit-animation: chromoColors 120s infinite;
}
.whitefont {
  color: #ffffff;
}

.whitefont::-webkit-input-placeholder {
   color: rgba(255,255,255,0.7);
}

.whitefont:-moz-placeholder { /* Firefox 18- */
   color: rgba(255,255,255,0.7);
}

.whitefont::-moz-placeholder {  /* Firefox 19+ */
   color: rgba(255,255,255,0.7);
}

.whitefont:-ms-input-placeholder {
   color: rgba(255,255,255,0.7);
}
.achievements {
  background-color: #f8f8f8;
  border-radius: 8px;
  padding: 10px;
}


.anti-modal-box {
  border-radius: 5px;
  width:530px;
}
.anti-modal-body {
  text-align:center;
  padding:50px;
}
.note {
  padding:10px;
  margin-bottom:10px;
  background-color:#f9f9f9;
  border-radius:8px;
}

.note p {
  margin:0px;
}

